@@ -1,6 +1,10 @@
 gem2deb (0.25) UNRELEASED; urgency=medium
 
   * debian/control: switch from git:// to https:// in Vcs-Git:
+  * dh-make-ruby: stop creating debian/ruby-test-files.yaml. In my experience
+    that almost never works out of the box.
+    - Note that dh_ruby still supports it, we just won't autogenerate that
+      when creating new packaging from scratch anymorel.
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 09 Jan 2016 21:00:29 -0200
 
